Refatora modelos, DAOs, serviços e JSPs de endereços, entregas e produtos; ajusta validações e configuração de banco